
MACRO(use_cxx11)
  IF (CMAKE_VERSION VERSION_LESS "3.1")
    IF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
      SET (CMAKE_CXX_FLAGS "--std=gnu++11 ${CMAKE_CXX_FLAGS}")
    ENDIF ()
  ELSE ()
    SET (CMAKE_CXX_STANDARD 11)
  ENDIF ()
ENDMACRO(use_cxx11)

PROJECT(qview)
SET_PROPERTY(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS TRUE)
FIND_PACKAGE(Qt5Core)
IF(NOT Qt5Core_FOUND)
    MESSAGE(ERROR "Qt5 libraries not found.")
ENDIF(NOT Qt5Core_FOUND)
ENABLE_LANGUAGE(C)
ENABLE_LANGUAGE(CXX)
use_cxx11()
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

ADD_EXECUTABLE(qview qview.cpp viewqueue.cpp qstat.cpp queue.cpp qjob.cpp )

TARGET_LINK_LIBRARIES(qview Qt5::Core)

INSTALL(TARGETS qview DESTINATION bin)


